Fix wrapping issues in deck builder at some screen sizes.

--- a/client/src/pages/DeckBuilder/DeckBuilder.scss
+++ b/client/src/pages/DeckBuilder/DeckBuilder.scss
@@ -9,10 +9,6 @@
     &-searchPanel {
         flex: 3.5;
 
-        @media only screen and (max-width: 75em) {
-            flex: 3;
-        }
-
         @media only screen and (max-width: 52.125em) {
             flex: 1;
             overflow-y: auto;
@@ -21,15 +17,17 @@
     }
 
     &-deckPanel {
-        height: 100%;
-        max-width: 30vw;
         max-height: 100vh;
+        height: 100%;
+        max-width: 45rem;
+        min-width: 45rem;
         overflow-y: auto;
         background-color: var(--color-primary-light);
         border-left: var(--line);
 
         @media only screen and (max-width: 75em) {
-            max-width: 40vw;
+            max-width: 35rem;
+            min-width: 35rem;
         }
 
         @media only screen and (max-width: 52.125em) {
@@ -37,9 +35,15 @@
             flex-direction: column;
             flex: 1;
             max-width: none;
+            width: 100%;
             max-height: 30vh;
             height: 30vh;
             border-left: none;
+        }
+
+        @media only screen and (max-width: 37.5em) {
+            max-width: 100%;
+            min-width: 100%;
         }
     }
 
